<resources>
    <string name="app_name">Earthquake</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preferences_title">Update Settings</string>
    <string name="refresh_frequency">Refresh frequency</string>
    <string name="minimum_magnitude">Minimum magnitude</string>
    <string name="magnitude">Magnitude</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="auto_refresh_summary">Select to turn on automatic updating</string>
    <string name="quakefeed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_day.geojson</string>
    <string name="expandedText">Click to open app</string>
    <string name="expandedTitle">"New Earthquake Found</string>

    <string name="action_refresh">Refresh</string>

    <string-array name="update_freq_options">
        <item>Every Minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Every Hour</item>
    </string-array>

    <string-array name="magnitude">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="magnitude_options">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="update_freq_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>60</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
