<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="PREF_MIN_MAG"
        android:title="@string/minimum_magnitude"
        android:summary="%s"
        android:entries="@array/magnitude_options"
        android:entryValues="@array/magnitude"
        android:dialogTitle="@string/magnitude"
        android:defaultValue="3"
        />

    <PreferenceCategory
        android:title="@string/preferences_title">


    <CheckBoxPreference
        android:key="PREF_AUTO_UPDATE"
        android:title="@string/auto_refresh"
        android:summary="@string/auto_refresh_summary"
        android:defaultValue="true"
        />


        <ListPreference
            android:key="PREF_UPDATE_FREQ"
            android:title="@string/refresh_frequency"
            android:summary="%s"
            android:entries="@array/update_freq_options"
            android:entryValues="@array/update_freq_values"
            android:dialogTitle="@string/refresh_frequency"
            android:defaultValue="60"
            />

    </PreferenceCategory>

</PreferenceScreen>